Vista de login creada

--- a/src/app/shared/app-bar/app-bar.component.html
+++ b/src/app/shared/app-bar/app-bar.component.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div *ngIf="usuarioLogueado" class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a
         class="nav-link"
@@ -24,6 +24,9 @@
         <a
         class="nav-link disabled">RESERVA</a>
       </div>
+    </div>
+    <div class="register">
+      <button routerLink="register" type="button" class="btn btn-primary">Registrarse</button>
     </div>
   </div>
 </nav>
