Creado el refresco del token y el comportamiento de la appbar

--- a/src/app/shared/app-bar/app-bar.component.css
+++ b/src/app/shared/app-bar/app-bar.component.css
@@ -30,6 +30,11 @@ a:hover{
   margin-right: 0.3rem;
 }
 
+.logout{
+  background: #002F7B;
+  color: white;
+}
+
 .register button{
   border: none;
   background: #002F7B;
