--- a/src/app/shared/app-bar/app-bar.component.html
+++ b/src/app/shared/app-bar/app-bar.component.html
@@ -26,7 +26,11 @@
         routerLinkActive="active">CLASES</a>
         <a
         class="nav-link disabled">RESERVA</a>
+        <button (click)="cerrarSesion()" type="button" class="logout btn btn-default">
+          Cerrar sesión
+        </button>
       </div>
+
     </div>
   </div>
 </nav>
