--- a/src/app/reservas/pages/clases/clases.component.html
+++ b/src/app/reservas/pages/clases/clases.component.html
@@ -1,10 +1,12 @@
-<div class="box">
-  <div class="card" style="width: 18rem;">
-    <img src="" class="card-img-top">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="container">
+  <div class="box row">
+    <div *ngFor="let clase of clases" class="col-3 card">
+      <img [src]="clase.imagen" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">{{ clase.nombre }}</h5>
+        <p class="card-text">{{ clase.descripcion }}</p>
+        <a href="#" class="btn btn-primary" style="background: #002F7B;border: none">AÑADIR A RESERVA</a>
+      </div>
     </div>
   </div>
 </div>
