Creada la comprobacion de los articulos dentro de la reserva e indicativo de material reservado

--- a/src/app/shared/app-bar/app-bar.component.html
+++ b/src/app/shared/app-bar/app-bar.component.html
@@ -48,7 +48,7 @@
               <span class="material-symbols-outlined reserva" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
               article
               </span>
-              <span class="badge">3</span>
+              <span class="badge"> {{ cantidadArticulos }} </span>
         </div>
 
 
