--- a/src/app/reservas/components/confirmacion/confirmacion.component.html
+++ b/src/app/reservas/components/confirmacion/confirmacion.component.html
@@ -4,19 +4,22 @@
 </div>
 <div class="offcanvas-body">
 
-  <div class="card mb-3" style="max-width: 540px;">
+  <div *ngFor="let articulo of articulos" >
+      <div *ngIf="comprobarArticuloReservado(articulo)" class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="..." class="img-fluid rounded-start" alt="...">
+        <img [src]="articulo.imagen" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title"> {{ articulo.nombre }} </h5>
+          <p class="card-text">{{ articulo.descripcion }}</p>
+          <a (click)="eliminarReserva(articulo)" class="btn btn-danger">Eliminar de la reserva</a>
         </div>
       </div>
     </div>
   </div>
+  </div>
+
 
 </div>
