Boton de confirmar la reserva sin funcionalidad

--- a/src/app/reservas/components/confirmacion/confirmacion.component.html
+++ b/src/app/reservas/components/confirmacion/confirmacion.component.html
@@ -19,7 +19,13 @@
       </div>
     </div>
   </div>
+
   </div>
+
+  <div class="confirmar">
+     <a (click)="hacerReserva()" class="btn btn-primary"> Confirmar la reserva </a>
+  </div>
+
 
 
 </div>
