Todos los articulos ahora se pueden añadir a la reserva y se ven los no disponibles

--- a/src/app/reservas/components/confirmacion/confirmacion.component.css
+++ b/src/app/reservas/components/confirmacion/confirmacion.component.css
@@ -2,4 +2,19 @@
 {
   position:absolute;
   bottom: 1rem;
+  height: 60px;
+  width: 100%;
+  background: white;
 }
+
+.boton-reserva{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.cuerpo{
+  overflow: auto;
+  height: 800px;
+  margin-bottom: 60px;
+}
+
