Componente de mis reservas declarado

--- a/src/app/reservas/components/confirmacion/confirmacion.component.html
+++ b/src/app/reservas/components/confirmacion/confirmacion.component.html
@@ -37,7 +37,9 @@
       <div class="card-header ">Felicidades</div>
       <div class="card-body">
         <h5 class="card-title">La reserva se ha realizado con éxito.</h5>
-        <a class="btn btn-light"> Ver mis reservas</a>
+        <a
+        routerLink="mis-reservas"
+        class="btn btn-light"> Ver mis reservas</a>
       </div>
     </div>
 
